[package]
name = "recru-search"
version = "0.1.0"
description = "A Solana-based platform for research study recruitment and management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recru_search"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = [
    "init-if-needed",
    "anchor-debug",
    "derive"
]}
anchor-spl = { version = "0.30.1", features = [
    "metadata",
    "token",
    "associated_token"
]}
mpl-token-metadata = "4.1.2"